--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,9 @@ android {
         applicationId "unii.mtg.mana.calculator"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 4
+        versionCode 5
         generatedDensities = []
-        versionName "0.2.1"
+        versionName "0.2.2"
     }
 
 // This is handled for you by the 2.0+ Gradle Plugin
@@ -36,5 +36,8 @@ dependencies {
     compile 'org.adw.library:discrete-seekbar:1.0.1'
     compile('com.github.afollestad.material-dialogs:core:0.8.5.6@aar') {
         transitive = true
+    }
+    compile ('com.github.worker8:tourguide:1.0.17-SNAPSHOT@aar'){
+        transitive=true
     }
 }
