--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         applicationId "unii.mtg.mana.calculator"
@@ -29,12 +29,12 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.github.Androguide:HoloGraphLibrary:5562473'
     compile 'org.adw.library:discrete-seekbar:1.0.1'
-    compile('com.github.afollestad.material-dialogs:core:0.8.5.6@aar') {
+    compile('com.afollestad.material-dialogs:core:0.9.4.5') {
         transitive = true
     }
     compile ('com.github.worker8:tourguide:1.0.17-SNAPSHOT@aar'){
