--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "unii.mtg.mana.calculator"
         minSdkVersion 15
-        targetSdkVersion 27
-        versionCode 7
+        targetSdkVersion 28
+        versionCode 8
         generatedDensities = []
         versionName "0.2.5-dependency-update"
     }
@@ -18,7 +18,10 @@ android {
         additionalParameters "--no-version-vectors"
     }
 
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     buildTypes {
         release {
@@ -29,21 +32,26 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation ('com.jakewharton:butterknife:10.2.0'){
+        exclude group: 'com.android.support', module: "appcompat-v7"
+    }
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
     implementation ('com.github.Androguide:HoloGraphLibrary:5562473'){
         transitive = true
 
     }
     implementation ('org.adw.library:discrete-seekbar:1.0.1'){
         transitive = true
+        exclude group: 'com.android.support', module: "appcompat-v7"
     }
     implementation('com.afollestad.material-dialogs:core:0.9.6.0') {
+        exclude group: 'com.android.support', module: "appcompat-v7"
         transitive = true
     }
     implementation('com.github.worker8:tourguide:1.0.17-SNAPSHOT@aar') {
         transitive = true
+        exclude group: 'com.android.support', module: "appcompat-v7"
     }
 }
